--- a/templates/test.html
+++ b/templates/test.html
@@ -20,7 +20,10 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
+    {{user}}
+    
     <a href="{% url "social:begin" "google-oauth2" %}">Google+</a>
+    <a href="{% url "social:begin" "facebook-oauth2" %}">Facebook</a>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
