--- a/templates/test.html
+++ b/templates/test.html
@@ -20,14 +20,17 @@
   </head>
   <body>
     <h1>Hello, world!</h1>
-<<<<<<< HEAD
+
     {{user}}
-    
-    <a href="{% url "social:begin" "google-oauth2" %}">Google+</a>
-    <a href="{% url "social:begin" "facebook-oauth2" %}">Facebook</a>
-=======
-    <a href="{% url "social:begin" "google-oauth2" %}">Google+ Login</a>
->>>>>>> cf29cd2b2c430be96b98e4b411f089a3a6ec1750
+    {{userActive.key}}
+    <div class="row">
+  <div class="col-md-3">
+    <a class="btn btn-outline-dark" href="{% url "social:begin" "google-oauth2" %}" role="button" style="text-transform:none">
+      <img width="20px" style="margin-bottom:3px; margin-right:5px" alt="Google sign-in" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/53/Google_%22G%22_Logo.svg/512px-Google_%22G%22_Logo.svg.png" />
+      Login with Google
+    </a>
+  </div>
+</div>
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
